Revert "fix layout bugs for mobile"
This reverts commit 5b9335ee9c5813c019deef6821b1c39e33215a63.

--- a/src/components/Section.module.scss
+++ b/src/components/Section.module.scss
@@ -12,7 +12,7 @@
   align-items: flex-start;
 
   @media (max-width: $breakpoint-mobile) {
-    grid-template: auto 1fr / 100%;
+    grid-template: auto 1fr / 1fr;
   }
 }
 
@@ -43,7 +43,7 @@
 
   @media (max-width: $breakpoint-mobile) {
     overflow: auto;
-    grid-template: 1fr / 1fr;
+    grid-template: auto 1fr / 1fr;
     padding: 0 10px;
   }
 }
@@ -65,13 +65,12 @@
   }
 
   @media (max-width: $breakpoint-mobile) {
-    display: none;
-    // grid-row: 2;
-    // grid-column: 1;
+    grid-row: 2;
+    grid-column: 1;
 
-    // overflow: initial;
-    // width: 100%;
-    // left: 0;
+    overflow: initial;
+    width: 100%;
+    left: 0;
   }
 }
 
@@ -111,11 +110,6 @@
   width: 100%;
   grid-template: auto 1fr / 1fr;
   overflow: auto;
-  
-  @media (max-width: $breakpoint-mobile) {
-    padding: 0;
-    grid-column: 1;
-  }
 
 }
 
